--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -1,6 +1,7 @@
 <h3> Currently Scheduled and Past Trainings </h3>
 <%= link_to "See Only Upcoming Trainings", '/trainings/upcoming' %><br>
 <%= link_to "See Only Past Trainings", '/trainings/past' %><br>
+<%= link_to "Back to Dashboard", user_path(current_user) %><br>
 <%= link_to "Create New Training", new_training_path(@training) %><br>
 
 <%= render :partial => "list", :locals => {:trainings => @trainings} %>
