add class to back to trainings button so can optionally remove it from DOM

--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -8,4 +8,4 @@
 <%= admin_edit_button %>
 <%= admin_cancel_button %>
 
-<%= link_to "Back to Trainings", trainings_path %>
+<%= link_to "Back to Trainings", trainings_path, :class => "back_to_trainings" %>
