move rendering of training edit button from javascript to template

--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -39,8 +39,11 @@
 
     <button class="next-training" data-id={{id}}>Next Training</button>
 
-    <!-- I DON'T KNOW HOW TO IMPLEMENT THIS LOGIC!!! -->
-    
+    <!-- WE NEED A WAY TO STORE THE EQUALITY OF CURRENT USER AND CURRENT TRAINING USER TO PASS TO THE TEMPALTE IF STATEMENT -->
+    {{#if user.id}}
+        <form class="button_to" method="get" action="/trainings/{{id}}/edit">
+        <input class="back_to_trainings" value="Edit Training" type="submit"></form>`</p>
+    {{/if}}
     <%= admin_edit_button %>
     <%= admin_cancel_button %>
 </script>
