--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -24,7 +24,7 @@
 
 <script id="training-show-template" type="text/x-handlebars-template">
     <fieldset>
-        <legend><h3> {{name}} </h3></legend>
+        <legend> {{name}} </legend>
 
         <p> Description: {{description}} </p>
         <p> Room: {{simroom}} </p>
