--- a/app/assets/stylesheets/trainings.css
+++ b/app/assets/stylesheets/trainings.css
@@ -7,19 +7,50 @@ legend {
     font-size: 20px;
     letter-spacing: 2px;
     word-spacing: 2px;
-    color: #000000;
+    color: white;
     font-variant: small-caps;
-    background-color: white;
+    background-color: grey;
+    padding: 14px 25px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
 }
 
 p {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size: 16px;
-    letter-spacing: 2px;
-    word-spacing: 2px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
     color: #000000;
 }
 
-a.whatever {
-
+a {
+    color: white;
+    background-color: #f44336;
+    padding: 14px 25px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
 }
+
+a:hover {
+    color: grey
+}
+
+button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+
+
+/* a.whatever {
+    background-color:grey;
+} */
+
