--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,6 +1,6 @@
 <h3> Equipment </h3>
 
-<%= link_to "Back to Dashboard", root_path %><br>
+<%= link_to "Back to Dashboard", root_path %>
 <%= link_to "Add New Equipment", new_equipment_path %>
 
 <% @equipment_index.each do |equipment| %>
