--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,6 +1,6 @@
 <h3> Reports for <%= @equipment.name %> </h3>
 <%= link_to "Create New Report", new_equipment_report_path(@equipment) %>
-<br>
+<%= link_to "Back to Equipment", equipment_index_path %>
 <%= link_to "Back to Dashboard", user_path(current_user) %>
 <ul> <% @reports.each do |report| %>
     <fieldset>
