--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -1,9 +1,9 @@
 
 
 <h3> Currently Scheduled and Past Trainings </h3>
-<%= link_to "See Only Upcoming Trainings", '/trainings/upcoming' %><br>
-<%= link_to "See Only Past Trainings", '/trainings/past' %><br>
-<%= link_to "Back to Dashboard", user_path(current_user), :id => "current_user" %><br>
+<%= link_to "See Only Upcoming Trainings", '/trainings/upcoming' %>
+<%= link_to "See Only Past Trainings", '/trainings/past' %><br><br>
+<%= link_to "Back to Dashboard", user_path(current_user), :id => "current_user" %>
 <%= link_to "Schedule New Training", new_training_path, :class => "new_training" %>
 <div class= "training_form"></div>
 <%= render :partial => "list", :locals => {:trainings => @trainings} %>
