--- a/app/assets/stylesheets/trainings.css
+++ b/app/assets/stylesheets/trainings.css
@@ -50,7 +50,10 @@ button, input[type=submit] {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    float: left;
+    margin: 5px 2px;
 }
+
 
 
 /* a.whatever {
